--- a/cryptodash/src/views/CommonStylesMenus.css
+++ b/cryptodash/src/views/CommonStylesMenus.css
@@ -69,12 +69,11 @@
 .menu-dual button.active {
   background-color: var(--primary-color); /* Color principal cuando está activo */
   color: var(--secondary-color);
-  transform: scale(1.05);
 }
 
 .menu-dual button:not(.active):hover {
   background-color: #e6e6e6; /* Color al pasar el ratón por encima */
-  transform: scale(1.02); /* Efecto de escala al pasar el ratón por encima */
+   /* Efecto de escala al pasar el ratón por encima */
 }
 
 /* Estilos para los contenedores de enviar y recibir */
@@ -88,6 +87,8 @@
 /* Estilos para los select boxes */
 .select-container, .input-group, .wallet-address-container, .qr-and-address, .address-and-copy, .address-with-button {
   margin-bottom: 20px; /* Espaciado uniforme */
+  position: relative;
+
 }
 
 
@@ -160,7 +161,6 @@
   border: 1px solid var(--neutral-gray);
   border-radius: 5px;
   padding: 0 12px; /* Padding interno */
-  border: 1px solid var(--neutral-gray);
   font-size: 16px;
   box-sizing: border-box;
 }
@@ -243,4 +243,31 @@
 
 .user-balance{
   margin-top: 16px;
+}
+
+.input-wrapper {
+  position: relative;
+  display: block;
+  margin-bottom: 20px; /* Ajusta según tus necesidades */
+}
+.withdraw-amount-max-container {
+  position: absolute; /* Posiciona este contenedor dentro del input-group */
+  right: 15px; /* Ajusta esto según tus necesidades */
+  top: 50%;
+  transform: translateY(-50%); /* Centra verticalmente el contenedor */
+  display: flex;
+  align-items: center;
+  color: var(--neutral-gray);
+}
+
+
+.amount-max, .btc-max {
+  cursor: pointer;
+}
+
+.separator-withdraw-amount-max {
+  width: 1px;
+  height: 12px; /* Ajusta esto según tus necesidades */
+  background-color: var(--neutral-gray); /* Ajusta el color según tus necesidades */
+  margin: 0 5px; /* Espacio a ambos lados del separador */
 }
